--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
